syntax = "proto3";
package proto;

option go_package = "./proto";

message ShamanTalents {
	// Elemental
	int32 convection = 1;
	int32 concussion = 2;
	int32 call_of_flame = 3;
	int32 elemental_warding = 4;
	int32 elemental_devastation = 5;
	int32 reverberation = 6;
	bool elemental_focus = 7;
	int32 elemental_fury = 8;
	int32 improved_fire_nova = 9;
	int32 eye_of_the_storm = 10;
	int32 elemental_reach = 11;
	bool call_of_thunder = 12;
	int32 unrelenting_storm = 13;
	int32 elemental_precision = 14;
	int32 lightning_mastery = 15;
	bool elemental_mastery = 16;
	int32 storm_earth_and_fire = 17;
	int32 booming_echoes = 18;
	int32 elemental_oath = 19;
	int32 lightning_overload = 20;
	int32 astral_shift = 21;
	bool totem_of_wrath = 22;
	int32 lava_flows = 23;
	int32 shamanism = 24;
	bool thunderstorm = 25;

	// Enhancement
	int32 enhancing_totems = 26;
	int32 earths_grasp = 27;
	int32 ancestral_knowledge = 28;
	int32 guardian_totems = 29;
	int32 thundering_strikes = 30;
	int32 improved_ghost_wolf = 31;
	int32 improved_shields = 32;
	int32 elemental_weapons = 33;
	bool shamanistic_focus = 34;
	int32 anticipation = 35;
	int32 flurry = 36;
	int32 toughness = 37;
	int32 improved_windfury_totem = 38;
	bool spirit_weapons = 39;
	int32 mental_dexterity = 40;
	int32 unleashed_rage = 41;
	int32 weapon_mastery = 42;
	int32 frozen_power = 43;
	int32 dual_wield_specialization = 44;
	bool dual_wield = 45;
	bool stormstrike = 46;
	int32 static_shock = 47;
	bool lava_lash = 48;
	int32 improved_stormstrike = 49;
	int32 mental_quickness = 50;
	bool shamanistic_rage = 51;
	int32 earthen_power = 52;
	int32 maelstrom_weapon = 53;
	bool feral_spirit = 54;

	// Restoration
	int32 improved_healing_wave = 55;
	int32 totemic_focus = 56;
	int32 improved_reincarnation = 57;
	int32 healing_grace = 58;
	int32 tidal_focus = 59;
	int32 improved_water_shield = 60;
	int32 healing_focus = 61;
	bool tidal_force = 62;
	int32 ancestral_healing = 63;
	int32 restorative_totems = 64;
	int32 tidal_mastery = 65;
	int32 healing_way = 66;
	bool natures_swiftness = 67;
	int32 focused_mind = 68;
	int32 purification = 69;
	int32 natures_guardian = 70;
	bool mana_tide_totem = 71;
	bool cleanse_spirit = 72;
	int32 blessing_of_the_eternals = 73;
	int32 improved_chain_heal = 74;
	int32 natures_blessing = 75;
	int32 ancestral_awakening = 76;
	bool earth_shield = 77;
	int32 improved_earth_shield = 78;
	int32 tidal_waves = 79;
	bool riptide = 80;
}

enum ShamanMajorGlyph {
	ShamanMajorGlyphNone = 0;
	GlyphOfChainHeal = 41517;
	GlyphOfChainLightning = 41518;
	GlyphOfEarthShield = 45775;
	GlyphOfEarthlivingWeapon = 41527;
	GlyphOfElementalMastery = 41552;
	GlyphOfFeralSpirit = 45771;
	GlyphOfFireElementalTotem = 41529;
	GlyphOfFireNova = 41530;
	GlyphOfFlameShock = 41531;
	GlyphOfFlametongueWeapon = 41532;
	GlyphOfFrostShock = 41547;
	GlyphOfHealingStreamTotem = 41533;
	GlyphOfHealingWave = 41534;
	GlyphOfHex = 45777;
	GlyphOfLava = 41524;
	GlyphOfLavaLash = 41540;
	GlyphOfLesserHealingWave = 41535;
	GlyphOfLightningBolt = 41536;
	GlyphOfLightningShield = 41537;
	GlyphOfManaTide = 41538;
	GlyphOfRiptide = 45772;
	GlyphOfShocking = 41526;
	GlyphOfStoneclawTotem = 45778;
	GlyphOfStormstrike = 41539;
	GlyphOfThunder = 45770;
	GlyphOfTotemOfWrath = 45776;
	GlyphOfWaterMastery = 41541;
	GlyphOfWindfuryWeapon = 41542;
}
enum ShamanMinorGlyph {
	ShamanMinorGlyphNone = 0;
	GlyphOfAstralRecall = 43381;
	GlyphOfGhostWolf = 43725;
	GlyphOfRenewedLife = 43385;
	GlyphOfThunderstorm = 44923;
	GlyphOfWaterBreathing = 43344;
	GlyphOfWaterShield = 43386;
	GlyphOfWaterWalking = 43388;
}

enum EarthTotem {
	NoEarthTotem = 0;
	StrengthOfEarthTotem = 1;
	TremorTotem = 2;
}

enum AirTotem {
	NoAirTotem = 0;
	TranquilAirTotem = 1;
	WindfuryTotem = 2;
	WrathOfAirTotem = 3;
}

enum FireTotem {
	NoFireTotem = 0;
	MagmaTotem = 1;
	SearingTotem = 2;
	TotemOfWrath = 3;
	FlametongueTotem = 4;
}

enum WaterTotem {
	NoWaterTotem = 0;
	ManaSpringTotem = 1;
}

message ShamanTotems {
	EarthTotem earth = 1;
	AirTotem air = 2;
	FireTotem fire = 3;
	WaterTotem water = 4;

	// If set, will use mana tide when appropriate.
	bool use_mana_tide = 5;

	// If set, will use fire elemental totem at the start and revert to regular
	// fire totems when it expires.
	bool use_fire_elemental = 6;

	// If set, will revert to regular fire totems when fire elemental goes OOM,
	// instead of waiting the full 2 minutes.
	bool recall_fire_elemental_on_oom = 7;

	// If set, any time a 2-minute totem is about to expire, will recall and
	// replace all totems.
	bool recall_totems = 8;
}

enum ShamanShield {
	NoShield = 0;
	WaterShield = 1;
	LightningShield = 2;
}

enum ShamanImbue {
    NoImbue = 0;
    WindfuryWeapon = 1;
    FlametongueWeapon = 2;
    FrostbrandWeapon = 3;
}

message ElementalShaman {
	message Rotation {
		ShamanTotems totems = 3;

		enum RotationType {
			Unknown = 0;
			Adaptive = 1;
		}
		RotationType type = 1;
		bool in_thunderstorm_range = 2;
	}

	message Options {
		ShamanShield shield = 1;
		bool bloodlust = 2;
	}

	Rotation rotation = 1;
	ShamanTalents talents = 2;
	Options options = 3;
}


message EnhancementShaman {
	message Rotation {
		ShamanTotems totems = 1;
	    // TODO: lightning/possibly lavaburst weaving
    }

  message Options {
	ShamanShield shield = 1;
	bool bloodlust = 2;
	bool delay_offhand_swings = 3;
    ShamanImbue imbueMH = 4;
    ShamanImbue imbueOH = 5;
  }

  Rotation rotation = 1;
  ShamanTalents talents = 2;
  Options options = 3;
}
